--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,6 +2,10 @@
 FROM eclipse-temurin:21-jdk-alpine AS build
 WORKDIR /app
 COPY . .
+
+# ✅ Give mvnw executable permissions
+RUN chmod +x mvnw
+
 RUN ./mvnw clean package -DskipTests
 
 # --- Run stage ---
