Updated image name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   backend:
     build: ./server
+    image: gareer/cashlens-backend:latest
     container_name: cashlens_server
     restart: always
     env_file:
